overflow issue resolved

--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -4,6 +4,7 @@
     width:auto;    
     margin:0 auto;  
     position: relative; 
+    overflow: hidden;
     .hero_bg{
         background-color:$primary_color_bg;
         position:absolute;
